fix color picker init and dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 body {
   margin: 0;
 }
+
+html.dark body {
+  background-color: #303030;
+  color: #fff;
+}
